force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Account__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Assets</relationshipLabel>
    <relationshipName>Insurance_Policy_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>