force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_ClaveAMIS__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ClaveAMIS__c</fullName>
    <label>Clave AMIS</label>
    <length>25</length>
    <type>Text</type>
</CustomField>