force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Clavevehicular__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Clavevehicular__c</fullName>
    <label>Clave vehicular</label>
    <length>25</length>
    <type>Text</type>
</CustomField>