force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Factura__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Factura__c</fullName>
    <formula>DSALES_InformacionPago__r.DSALES_Factura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factura</label>
    <type>Text</type>
</CustomField>