force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_InformacionPago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_InformacionPago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información de Pago</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DSALES_InformacionDePago__c.DSALES_Cliente__c</field>
            <operation>equals</operation>
            <valueField>$Source.DSALES_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DSALES_InformacionDePago__c</referenceTo>
    <relationshipLabel>Activos de pólizas de seguros</relationshipLabel>
    <relationshipName>Activos_de_p_lizas_de_seguros</relationshipName>
    <type>Lookup</type>
</CustomField>