force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Marca__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Marca__c</fullName>
    <label>Marca</label>
    <length>25</length>
    <type>Text</type>
</CustomField>