force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Numeromotor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numeromotor__c</fullName>
    <label>Número de motor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>