force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Numeroserie__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Numeroserie__c</fullName>
    <label>Número de serie</label>
    <length>25</length>
    <type>Text</type>
</CustomField>