force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Placas__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Placas__c</fullName>
    <label>Placas</label>
    <length>25</length>
    <type>Text</type>
</CustomField>