force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Servicio__c</fullName>
    <label>Servicio</label>
    <length>25</length>
    <type>Text</type>
</CustomField>