force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tienda__c</fullName>
    <label>Tienda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>