force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Uso__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Uso__c</fullName>
    <label>Uso</label>
    <length>25</length>
    <type>Text</type>
</CustomField>