force-app/main/default/objects/InsurancePolicyAsset/fields/DSALES_Valorfactura__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Valorfactura__c</fullName>
    <label>Valor factura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>